chore(backend): add app hang dynamic config properties
